welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:25: error: java.awt.Color does not take parameters
  growFlowers(); avance(3); Fleur(Color.blue()); avance(); gauche(); avance(2); droite(); growFlowers(); while (!estDosMur) {recule()}}
                                            ^FlowerCase:27: error: not found: value doite
grosPot(); gauche(); recule(); droite(); while (!estDosMur) {recule()}; droite(); doite(); avance(4); gauche(); grosPot() 
                                                                                  ^